--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="iOS"
+name="balloof-iOS"
 platform="iOS"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../iOS/balloofGD/balloof.ipa"
+export_path="../../iOS/balloof-iOS/balloof-iOS.ipa"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -22,8 +22,8 @@ application/code_sign_identity_debug="iPhone Developer"
 application/export_method_debug=1
 application/provisioning_profile_uuid_release=""
 application/code_sign_identity_release=""
-application/export_method_release=0
-application/name=""
+application/export_method_release=1
+application/name="balloof"
 application/info="Made with Godot Engine"
 application/identifier="weird.vision.balloof"
 application/signature=""
@@ -33,7 +33,7 @@ application/copyright=""
 capabilities/arkit=false
 capabilities/camera=false
 capabilities/access_wifi=false
-capabilities/game_center=true
+capabilities/game_center=false
 capabilities/in_app_purchases=false
 capabilities/push_notifications=false
 user_data/accessible_from_files_app=false
@@ -42,9 +42,9 @@ privacy/camera_usage_description=""
 privacy/microphone_usage_description=""
 privacy/photolibrary_usage_description=""
 orientation/portrait=true
-orientation/landscape_left=true
-orientation/landscape_right=true
-orientation/portrait_upside_down=true
+orientation/landscape_left=false
+orientation/landscape_right=false
+orientation/portrait_upside_down=false
 required_icons/iphone_120x120="res://balloon.png"
 required_icons/ipad_76x76="res://balloon.png"
 required_icons/app_store_1024x1024="res://balloon.png"
